--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    overflow: hidden;
+    overflow: auto;
     margin: 0;
     padding: 20px;
 }
@@ -25,10 +25,11 @@ body {
     background-color: $secondary-color;
     border-radius: 10px;
     box-shadow: $box-shadow;
-    padding: 50px 20px;
+    padding: 10px 10px;
     text-align: center;
     max-width: 100%;
     width: 800px;
+    margin: 10px;
 }
 
 h3 {
